Fix accessibility issues identified by WAVE
Fixes labels not being linked correctly, an issue where there as 1 pixel of width where both desktop & mobile search was not visible, and an issue where the desktop submit button had no value attribute which WAVE does not like.

--- a/components/global_search/styles.scss
+++ b/components/global_search/styles.scss
@@ -252,7 +252,7 @@ $button-focus-hover-text: #000;
 }
 
 #global-search-mobile-component {
-  @media screen and (min-width: 767px) {
+  @media screen and (min-width: 768px) {
     form, #showHideMobileLabel, #showHideMobileCheckbox {
       display: none;
     }
